update string formatting style for code convention