@@ -26,7 +26,7 @@ class QuestionCreateTest {
             .build();
         
         for (int i = 1; i <= 300; i++) {
-            var subject = String.format("테스트 데이터입니다:[%03d]", i);
+            var subject = "테스트 데이터입니다:[%03d]".formatted(i);
             var content = "내용무";
             var question = QuestionForm.builder()
                 .subject(subject)
